tests/errors/err_05_unclosed_paren.tslang
desnote ========================================
desnote TEST: ERROR - Unclosed parenthesis
desnote Tests: Missing closing parenthesis
desnote Expected: Lexer error about unclosed delimiter
desnote ========================================

Deschodt Eric() -> int
    peric("Hello"
    deschodt 0
